[package]
name = "dots-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
lru = "0.7.2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
warp = "0.3.2"
mongodb = "2.1.0"

[dev-dependencies]
serde_json = "1.0"
